# 2D-FluidSim

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/rendering/: fps_counter.cpp  fps_counter.h  grid_renderer.cpp  grid_renderer.h
src/simulator/: fluidSim.cpp  fluidSim.h  particle.cpp  particle.h
